--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
           <ul>
             <li><a href="#about">About</a></li>
-            <li><a href="#code-demo">Code Demo</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -31,5 +31,59 @@
         </p>
       </div>
     </section>
+
+    <section id="code-demo" class="section">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <div class="project-card">
+            <img
+              src="images/css1.png"
+              alt="Code demo of CSS"
+              style="max-width: 100%; height: 310px"
+            />
+          </div>
+          <div class="project-card">
+            <img
+              src="images/java1.png"
+              alt="Code demo of Java"
+              style="max-width: 100%; height: 310px"
+            />
+          </div>
+          <div class="project-card">
+            <img
+              src="images/css1.png"
+              alt="Code demo of CSS"
+              style="max-width: 100%; height: auto"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="skills" class="section">
+      <div class="container">
+        <h2>My Skills</h2>
+        <ul class="skills-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Java</li>
+          <li>C#</li>
+          <li>Git</li>
+        </ul>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <p>2025 Mattias Franzén.</p>
+        <div class="social-links">
+          <a href="">LinkedIn</a>
+          <a href="">GitHub</a>
+          <a href="">Twitter</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
