--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img
               src="images/css1.png"
               alt="Code demo of CSS"
-              style="max-width: 100%; height: auto"
+              style="max-width: 100%; height: 310px"
             />
           </div>
         </div>
