--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </section>
 
-    <section id="code-demo" class="section">
+    <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
         <div class="project-grid">
