--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -16,7 +16,6 @@
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -26,7 +25,7 @@
       <div class="container">
         <h2>About Me</h2>
         <p>
-          I am studying C# at Lexicon. I have a passion for coding and enjoy
+          I am studying .NET at Lexicon. I have a passion for coding and enjoy
           working on various projects that challenge my skills and creativity.
         </p>
       </div>
@@ -40,22 +39,25 @@
             <img
               src="images/css1.png"
               alt="Code demo of CSS"
-              style="max-width: 100%; height: 310px"
+              style="max-width: 100%; height: 280px"
             />
+            <a href="#" class="button">View Project</a>
           </div>
           <div class="project-card">
             <img
               src="images/java1.png"
               alt="Code demo of Java"
-              style="max-width: 100%; height: 310px"
+              style="max-width: 100%; height: 280px"
             />
+            <a href="#" class="button">View Project</a>
           </div>
           <div class="project-card">
             <img
               src="images/css1.png"
               alt="Code demo of CSS"
-              style="max-width: 100%; height: 310px"
+              style="max-width: 100%; height: 280px"
             />
+            <a href="#" class="button">View Project</a>
           </div>
         </div>
       </div>
@@ -79,9 +81,10 @@
       <div class="container">
         <p>2025 Mattias Franzén.</p>
         <div class="social-links">
-          <a href="">LinkedIn</a>
-          <a href="">GitHub</a>
-          <a href="">Twitter</a>
+          <a href="https://www.linkedin.com/in/mattias-franz%C3%A9n-0b0311141/"
+            >LinkedIn</a
+          >
+          <a href="https://github.com/fraanzen">GitHub</a>
         </div>
       </div>
     </footer>
